# latte

./: .clang-format  .gitignore  CMakeLists.txt  README.md  action.yml
.github/actions/: action.yml
.github/workflows/: build.yml
cmake/: ConfigGen.cmake  Cuda.cmake  Dependencies.cmake  Misc.cmake  ProtoBuf.cmake  Summary.cmake  Targets.cmake  Utils.cmake  cuda.cmake  cudnn.cmake  third_party.cmake
cmake/Modules/: FindMKL.cmake
cmake/Templates/: LatteConfig.cmake.in  LatteConfigVersion.cmake.in  latte_config.h.in
docker/: dockerfile  dockerfile_ci
include/latte/: blob.h  common.h  filler.h  latte.h  layer.h  layer_factory.h  net.h  syncedmem.h
include/latte/layers/: cudnn_sigmoid_layer.h  cudnn_softmax_layer.h  dummy_data_layer.h  euclidean_loss_layer.h  inner_product_layer.h  loss_layer.h  neuron_layer.h  sigmoid_layer.h  softmax_layer.h
include/latte/test/: test_latte_main.h
include/latte/util/: benchmark.h  cudnn.h  device_alternate.h  insert_splits.h  io.h  math_functions.h  rng.h
scripts/: build.sh
src/latte/: CMakeLists.txt  blob.cc  common.cc  layer.cc  layer_factory.cc  net.cc  syncedmem.cc
src/latte/layers/: CMakeLists.txt  cudnn_sigmoid_layer.cc  cudnn_softmax_layer.cc  dummy_data_layer.cc  euclidean_loss_layer.cc  euclidean_loss_layer.cu  inner_product_layer.cc  inner_product_layer.cu  loss_layer.cc  neuron_layer.cc  sigmoid_layer.cc  sigmoid_layer.cu  softmax_layer.cc  softmax_layer.cu
src/latte/proto/: latte.proto
src/latte/test/: CMakeLists.txt  test_benchmark.cc  test_blob.cc  test_common.cc  test_dummy_data_layer.cc  test_euclidean_loss_layer.cc  test_filler.cc  test_inner_product_layer.cc  test_latte_main.cc  test_layer_factory.cc  test_net.cc  test_softmax_layer.cc  test_syncedmem.cc
src/latte/util/: CMakeLists.txt  benchmark.cc  cudnn.cc  insert_splits.cc  io.cc  math_functions.cc  math_functions.cu
tools/: CMakeLists.txt  latte.cc
